--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,4 +14,103 @@ h3,
 p,
 ul {
   margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+img {
+  display: block;
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+body {
+  background-color: lemonchiffon;
+}
+
+.container {
+  width: 1200px;
+  padding: 15px 15px;
+  margin: 0 auto;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+}
+
+.input {
+  min-width: 250px;
+  min-height: 50px;
+  margin-right: 25px;
+  padding-left: 16px;
+  padding-right: 16px;
+  background-color: rgba(24, 169, 194, 0.322);
+  border: 2px solid grey;
+  border-radius: 4px;
+}
+
+.btn {
+  display: flex;
+  justify-content: center;
+  width: 130px;
+  height: 50px;
+  margin-right: 50px;
+  padding: 10px;
+  font-weight: 600;
+  font-size: 20px;
+  background-color: rgba(24, 169, 194, 0.322);
+  border: 2px solid grey;
+  border-radius: 4px;
+}
+
+.btn:hover,
+.btn:focus {
+  color: antiquewhite;
+  border: 4px solid rgba(3, 16, 19, 0.322);
+  border-radius: 6px;
+  background-color: rgb(24, 169, 194);
+}
+
+.btn.secondary {
+  margin-top: 30px;
+}
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: calc(-1 * 30px);
+}
+
+.photo-card {
+  flex-basis: calc((100% - 3 * 30px) / 3);
+  margin-left: 30px;
+  margin-top: 30px;
+  background-color: rgba(231, 122, 231, 0.247);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  text-align: center;
+}
+
+.stats {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.stats-item {
+  display: flex;
+  align-items: center;
+  margin: 9px;
+}
+
+.material-icons {
+  margin-right: 3px;
 }
